# DBImporter

./: .gitignore  .gitmodules  CMakeLists.txt  CSQLLiteImporter.cpp  CSQLLiteImporter.h  DBDFile.cpp  DBDFile.h  README.md  main.cpp
.github/workflows/: ccpp.yml  main.yml
DBD/: DBDFile.h  DBDFileStorage.cpp  DBDFileStorage.h
WDC2/: DB2Base.h
WDC3/: DB2Base.cpp  DB2Base.h
exporters/: IExporter.h
exporters/sqlite/: CSQLLiteExporter.cpp  CSQLLiteExporter.h
fileReaders/DBD/: DBDFile.cpp  DBDFile.h  DBDFileStorage.cpp  DBDFileStorage.h
fileReaders/WDC2/: DB2Base.cpp  DB2Base.h
fileReaders/WDC3/: DB2Base.cpp  DB2Base.h  DB2Ver3.cpp  DB2Ver3.h
fileReaders/WDC4/: DB2Ver4.cpp  DB2Ver4.h
fileReaders/WDC5/: DB2Ver5.cpp  DB2Ver5.h
importers/: CImporterClass.cpp  CImporterClass.h  FieldInterchangeData.h  WDC3Importer.cpp  WDC3Importer.h
importers/WDC3/: WDC3Importer.cpp  WDC3Importer.h
persistance/: persistanceFile.h
